Fix layout issue with slider distribution label

--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -177,7 +177,7 @@ html body[data-focus-source="key"] input[class*="lf-slider"]:focus {
 
 .slider-wrapper {
   position: relative;
-  padding: 0 60px;
+  padding: 0 3.5rem;
 }
 
 .lf-slider,
@@ -187,9 +187,11 @@ html body[data-focus-source="key"] input[class*="lf-slider"]:focus {
 
 // Labels
 
+.slider-label-right,
 .slider-label-left {
   left: 0;
   text-align: right;
+  @include font-smoothing();
 
   &.distribution-label {
     position: absolute;
@@ -197,12 +199,12 @@ html body[data-focus-source="key"] input[class*="lf-slider"]:focus {
     right: 0;
     bottom: 30px;
     z-index: 1;
-    width: 8px;
+    width: 1.2rem;
     padding: 1em 0 .8rem;
     font-family: $font-family-sans-serif;
     font-size: $font-size-xs;
-    color: $gray;
     text-align: left;
+    word-spacing: -0.15em;
     text-transform: uppercase;
     pointer-events: none;
     transition:
@@ -214,15 +216,15 @@ html body[data-focus-source="key"] input[class*="lf-slider"]:focus {
       @include glyph-arrow-right($gray);
       position: absolute;
       right: 100%;
-      bottom: 0;
-      left: 52%;
+      bottom: -0.25rem;
+      left: -0.3rem;
       display: block;
       width: 18px;
       height: 10px;
-
+      opacity: 0.5;
       content: "";
       border: 0;
-      transform: translateX(-50%) rotate(90deg);
+      transform: rotate(90deg);
     }
 
     @supports (-ms-ime-align: auto) {
@@ -233,19 +235,17 @@ html body[data-focus-source="key"] input[class*="lf-slider"]:focus {
 
 .slider-label-right {
   right: 0;
+  left: auto;
   text-align: left;
   white-space: nowrap;
 
   &.distribution-label {
-    top: auto !important;
-    bottom: 30px;
-    width: 8px;
-    text-align: center;
+    width: 2rem;
     text-align: right;
-    transform: none;
 
     &::before {
-      left: 100%;
+      right: 0;
+      left: 1.15rem;
     }
 
     @supports (-ms-ime-align: auto) {
@@ -257,7 +257,7 @@ html body[data-focus-source="key"] input[class*="lf-slider"]:focus {
 .slider-label-left,
 .slider-label-right {
   position: absolute;
-  top: 5px;
+  top: 3px;
   width: 50px;
   font-family: $font-family-sans-serif;
   font-weight: 700;
